--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <title>Roman's Portfolio</title>
-        <!-- <meta content="" name="description">
-          <meta content="" name="keywords"> -->
 
         <!-- Favicons -->
         <link
@@ -30,12 +28,6 @@
         <link
         href="assets/css/style.css" rel="stylesheet">
 
-    <!-- =======================================================
-      * Template Name: iPortfolio - v1.5.0
-      * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-      * Author: BootstrapMade.com
-      * License: https://bootstrapmade.com/license/
-      ======================================================== -->
     </head>
 
     <body>
@@ -56,15 +48,13 @@
                     </h1>
                     <div
                         class="social-links mt-3 text-center">
-                        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                  <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-                        <a href="#" class="instagram">
-                            <i class="bx bxl-instagram"></i>
+                        <a href="https://github.com/romanrangel/romanrangel" class="github">
+                            <i class="bx bxl-github"></i>
                         </a>
-                        <a href="#" class="google-plus">
-                            <i class="bx bxl-skype"></i>
+                        <a href="https://drive.google.com/file/d/1-8uNOr0JZobcInOOjeRtOvqWYApyTGnR/view" class="resume">
+                            <i class='bx bx-window-open'></i>
                         </a>
-                        <a href="#" class="linkedin">
+                        <a href="https://www.linkedin.com/in/roman-rangel-1039a8200/" class="linkedin">
                             <i class="bx bxl-linkedin"></i>
                         </a>
                     </div>
@@ -73,7 +63,7 @@
                 <nav class="nav-menu">
                     <ul>
                         <li class="active">
-                            <a href="index.html">
+                            <a href="#hero">
                                 <i class="bx bx-home"></i>
                                 <span>Home</span>
                             </a>
@@ -95,11 +85,6 @@
                                 <i class="bx bx-book-content"></i>
                                 Portfolio</a>
                         </li>
-                        <!-- <li>
-                            <a href="#services">
-                                <i class="bx bx-server"></i>
-                                Services</a>
-                        </li> -->
                         <li>
                             <a href="#contact">
                                 <i class="bx bx-envelope"></i>
@@ -137,7 +122,6 @@
 
                     <div class="section-title">
                         <h2>About</h2>
-                        <p>I enjoy the challenge of turning complex problems into simple and beautiful interface designs. I love the logic and structure of coding and always strive to write elegant and efficient code, whether it be HTML, CSS, or Javascript. When I am not learning how to code, you'll find me around friends and family or playing simulation video games. Driven and permanently curious, I strive to turn visitors into customers and help your business grow.</p>
                     </div>
 
                     <div class="row">
@@ -146,10 +130,6 @@
                         </div>
                         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                             <h3>A Full-Stack Developer from San Diego, California.</h3>
-                            <!-- <p class="font-italic">
-                                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                                          magna aliqua.
-                                        </p> -->
                             <div class="row">
                                 <div class="col-lg-6">
                                     <ul>
@@ -161,8 +141,6 @@
                                             <i class="icofont-rounded-right"></i>
                                             <strong>Age:</strong>
                                             21</li>
-                                        <!-- <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li> -->
-                                        <!-- <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li> -->
                                         <li>
                                             <i class="icofont-rounded-right"></i>
                                             <strong>City:</strong>
@@ -186,10 +164,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <p>
-                                Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-                                              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-                            </p>
+                            <p>I enjoy the challenge of turning complex problems into simple and beautiful interface designs. I love the logic and structure of coding and always strive to write elegant and efficient code, whether it be HTML, CSS, or Javascript. When I am not learning how to code, you'll find me around friends and family or playing simulation video games. Driven and permanently curious, I strive to turn visitors into customers and help your business grow.</p>
                         </div>
                     </div>
 
@@ -198,7 +173,7 @@
             <!-- End About Section -->
 
             <!-- ======= Facts Section ======= -->
-            <section id="facts" class="facts">
+            <!-- <section id="facts" class="facts">
                 <div class="container">
 
                     <div class="section-title">
@@ -251,7 +226,7 @@
                     </div>
 
                 </div>
-            </section>
+            </section> -->
             <!-- End Facts Section -->
 
             <!-- ======= Skills Section ======= -->
@@ -260,7 +235,6 @@
 
                     <div class="section-title">
                         <h2>Skills</h2>
-                        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
                     </div>
 
                     <div class="row skills-content">
@@ -300,28 +274,28 @@
 
                             <div class="progress">
                                 <span class="skill">Node.js
-                                    <i class="val">35%</i>
+                                    <i class="val">50%</i>
                                 </span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
 
                             <div class="progress">
                                 <span class="skill">Heroku
-                                    <i class="val">20%</i>
+                                    <i class="val">70%</i>
                                 </span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
 
                             <div class="progress">
-                                <span class="skill">MySQL
-                                    <i class="val">35%</i>
+                                <span class="skill">SQL
+                                    <i class="val">50%</i>
                                 </span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
 
@@ -423,8 +397,8 @@
                             <div class="portfolio-wrap">
                                 <img src="assets/img/phontoMovietaste.JPG" class="img-fluid" alt="">
                                 <div class="portfolio-links">
-                                    <a href="assets/img/phontoMovietaste.JPG" data-gall="portfolioGallery" class="venobox" title="App 1">
-                                        <i class="bx bx-link"></i>
+                                    <a href="assets/img/MovieTasteScreenshot.JPG" data-gall="portfolioGallery" class="venobox" title="App 1">
+                                        <i class="bx bx-plus"></i>
                                     </a>
                                     <a href="https://claudialhc.github.io/MovieTaste/" title="More Details">
                                         <i class="bx bx-link"></i>
@@ -437,7 +411,7 @@
                             <div class="portfolio-wrap">
                                 <img src="assets/img/phontoNotetakes.JPG" class="img-fluid" alt="">
                                 <div class="portfolio-links">
-                                    <a href="assets/img/phontoNotetakes.JPG" data-gall="portfolioGallery" class="venobox" title="Web 3">
+                                    <a href="assets/img/NoteTakerScreenshot.JPG" data-gall="portfolioGallery" class="venobox" title="Web 3">
                                         <i class="bx bx-plus"></i>
                                     </a>
                                     <a href="https://dry-reaches-22555.herokuapp.com/" title="Go to Website">
@@ -451,10 +425,24 @@
                             <div class="portfolio-wrap">
                                 <img src="assets/img/phontoFirstweb.JPG" class="img-fluid" alt="">
                                 <div class="portfolio-links">
-                                    <a href="assets/img/phontoFirstweb.JPG" data-gall="portfolioGallery" class="venobox" title="App 2">
+                                    <a href="assets/img/FirstPortfolioScreeshot.JPG" data-gall="portfolioGallery" class="venobox" title="App 2">
                                         <i class="bx bx-plus"></i>
                                     </a>
                                     <a href="https://romanrangel.github.io/romanrangel/" title="More Details">
+                                        <i class="bx bx-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-full">
+                            <div class="portfolio-wrap">
+                                <img src="assets/img/phontoEatDaBurger.JPG" class="img-fluid" alt="Eat Da Burger image">
+                                <div class="portfolio-links">
+                                    <a href="assets/img/EATDABURGER.JPG" data-gall="portfolioGallery" class="venobox" title="Web 3">
+                                        <i class="bx bx-plus"></i>
+                                    </a>
+                                    <a href="https://polar-tundra-87708.herokuapp.com/" title="Go to Website">
                                         <i class="bx bx-link"></i>
                                     </a>
                                 </div>
@@ -543,7 +531,7 @@
 
                     <div class="section-title">
                         <h2>Contact</h2>
-                        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                        <p>Feel free to contact me via the information provided below or leave your message and I will be back to you as soon as possible.</p>
                     </div>
 
                     <div class="row" data-aos="fade-in">
@@ -567,16 +555,39 @@
                                     <h4>Call:</h4>
                                     <p>(858) 342-9528</p>
                                 </div>
+
+
+                                <div class="col-md-12">
+                                    <hr class="my-4 jumboline">
+                                    <a href="https://www.linkedin.com/in/roman-rangel-1039a8200" class="btn bg-info text-white btn-lg btn-block jumbotext" role="button">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewbox="0 0 16 16">
+                                            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+                                        </svg>
+                                        LinkedIn</a>
+                                    <a href="https://github.com/romanrangel/romanrangel" class="btn bg-secondary text-white btn-lg btn-block jumbotext" role="button">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewbox="0 0 16 16">
+                                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                                        </svg>
+                                        Github</a>
+                                    <a href="https://drive.google.com/file/d/1-8uNOr0JZobcInOOjeRtOvqWYApyTGnR/view?usp=sharing " class="btn bg-danger text-white btn-lg btn-block jumbotext" role="button">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewbox="0 0 16 16">
+                                            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                                        </svg>
+                                        Resume</a>
+                                </div>
+
+
                             </div>
 
                         </div>
 
                         <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-                            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                            <form action="https://formspree.io/f/xaylvyev" method="POST" role="form" class="php-email-form">
                                 <div class="form-row">
                                     <div class="form-group col-md-6">
                                         <label for="name">Your Name</label>
-                                        <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" data-msg="Please enter at least 4 chars"/>
+                                        <input type="text" name="name" class="form-control" id="name" data-rule="minlen:1" data-msg="Please enter at least 4 characters"/>
                                         <div class="validate"></div>
                                     </div>
                                     <div class="form-group col-md-6">
