updated resume link and added The Brew Budz to portfolio section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a href="https://github.com/romanrangel/romanrangel" class="github">
                             <i class="bx bxl-github"></i>
                         </a>
-                        <a href="https://drive.google.com/file/d/1-8uNOr0JZobcInOOjeRtOvqWYApyTGnR/view" class="resume">
+                        <a href="https://drive.google.com/file/d/1o_eTI-JECGPGSqpcYJLHXQvp9zXZx-Id/view?usp=sharing" class="resume">
                             <i class='bx bx-window-open'></i>
                         </a>
                         <a href="https://www.linkedin.com/in/roman-rangel-1039a8200/" class="linkedin">
@@ -164,7 +164,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <p>I enjoy the challenge of turning complex problems into simple and beautiful interface designs. I love the logic and structure of coding and always strive to write elegant and efficient code, whether it be HTML, CSS, or Javascript. When I am not learning how to code, you'll find me around friends and family or playing simulation video games. Driven and permanently curious, I strive to turn visitors into customers and help your business grow.</p>
+                            <p>I enjoy the challenge of turning complex problems into simple and beautiful interface designs. I love the logic and structure of coding and always strive to write elegant and efficient code, whether it be HTML, CSS, jQuery, or Javascript. When I am not coding, you'll find me around friends and family or playing simulation video games. Driven and permanently curious, I strive to turn visitors into customers and help your business grow.</p>
                         </div>
                     </div>
 
@@ -317,14 +317,14 @@
 
                     <div class="row">
                         <div class="col-lg-6" data-aos="fade-up">
-                            <h3 class="resume-title">Sumary</h3>
+                            <h3 class="resume-title">Summary</h3>
                             <div class="resume-item pb-0">
                                 <h4>Roman Rangel</h4>
                                 <p>
                                     <em>The enjoyment of being challenged to turn complex problems into simple and beautiful interface designs is what has kept my passion for web development. My work will always strive to show elegant and efficient code, whether it is HTML, CSS, or Javascript.</em>
                                 </p>
                                 <ul>
-                                    <li>San Diego, Californa</li>
+                                    <li>(858) 342-9528</li>
                                     <!-- <li>(123) 456-7891</li> -->
                                     <li>romanrangel503@gmail.com</li>
                                 </ul>
@@ -337,32 +337,28 @@
                                 <p>
                                     <em>University of California, San Diego.</em>
                                 </p>
-                                <p>Learned the fundamentals of full-stack development.</p>
+                                <p>Certified in the fundamentals of full-stack development.</p>
                             </div>
                         </div>
                         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                             <h3 class="resume-title">Professional Experience</h3>
                             <div class="resume-item">
-                                <h4>Keyholder</h4>
+                                <h4>Management</h4>
                                 <h5>2018 - Present</h5>
                                 <p>
                                     <em>99 Cents Only Stores LLC
                                     </em>
                                 </p>
-                                <p>Managed and trained retail staff recruitment which led to a lowered turnover rate, higher customer service satisfaction, and sales goals.</p>
+                                <p>Accomplished store objectives and sales goals by coordinating with other members of management to enforce policies, procedures, and productivity standards.</p>
                             </div>
                             <div class="resume-item">
-                                <h4>Skills</h4>
-                                <ul>
-                                    <li>HTML, CSS, Javascript</li>
-                                    <li>GitHub</li>
-                                    <li>Bootstrap</li>
-                                    <li>Bulma.io</li>
-                                    <li>Node.js</li>
-                                    <li>Mobile responsiveness</li>
-                                    <li>Working well with others</li>
-                                    <li>Friendly and calm demeanor</li>
-                                </ul>
+                                <h4>Freelance</h4>
+                                <h5>2019 - Present</h5>
+                                <p>
+                                    <em>Web Design
+                                    </em>
+                                </p>
+                                <p>Designed front end code for acquaintances and polished code written by other developers to enhance user satisfaction.</p>
                             </div>
                         </div>
 
@@ -392,6 +388,20 @@
                     </div>
 
                     <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-full">
+                            <div class="portfolio-wrap">
+                                <img src="assets/img/phontoTheBrewBudz.JPG" class="img-fluid" alt="The Brew Budz image">
+                                <div class="portfolio-links">
+                                    <a href="assets/img/TheBrewBudzScreenshot.JPG" data-gall="portfolioGallery" class="venobox" title="Web 3">
+                                        <i class="bx bx-plus"></i>
+                                    </a>
+                                    <a href="https://thebrewbudz.herokuapp.com/landing" title="Go to Website">
+                                        <i class="bx bx-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-front">
                             <div class="portfolio-wrap">
@@ -448,6 +458,7 @@
                                 </div>
                             </div>
                         </div>
+
 
                     </div>
 
@@ -569,7 +580,7 @@
                                             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                                         </svg>
                                         Github</a>
-                                    <a href="https://drive.google.com/file/d/1-8uNOr0JZobcInOOjeRtOvqWYApyTGnR/view?usp=sharing " class="btn bg-danger text-white btn-lg btn-block jumbotext" role="button">
+                                    <a href="https://drive.google.com/file/d/1o_eTI-JECGPGSqpcYJLHXQvp9zXZx-Id/view?usp=sharing?usp=sharing " class="btn bg-danger text-white btn-lg btn-block jumbotext" role="button">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewbox="0 0 16 16">
                                             <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                                             <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
