--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
                 <div class="profile">
                     <img src="assets/img/PortraitWhite.jpg" alt="" class="img-fluid rounded-circle">
                     <h1 class="text-light">
-                        <a href="index.html">Roman Rangel</a>
+                        <a href="index.html" target="_blank" rel="noopener noreferrer">Roman Rangel</a>
                     </h1>
                     <div class="social-links mt-3 text-center">
-                        <a href="https://github.com/romanrangel/romanrangel" class="github">
+                        <a href="https://github.com/romanrangel/romanrangel" target="_blank" rel="noopener noreferrer"class="github">
                             <i class="bx bxl-github"></i>
                         </a>
-                        <a href="https://drive.google.com/file/d/1o_eTI-JECGPGSqpcYJLHXQvp9zXZx-Id/view?usp=sharing" class="resume">
+                        <a href="https://drive.google.com/file/d/1znMlL2dK_fyNJo93Bh5w8n5fj74jOeUF/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="resume">
                             <i class='bx bx-window-open'></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/roman-rangel-1039a8200/" class="linkedin">
+                        <a href="https://www.linkedin.com/in/roman-rangel-1039a8200/" target="_blank" rel="noopener noreferrer" class="linkedin">
                             <i class="bx bxl-linkedin"></i>
                         </a>
                     </div>
@@ -105,7 +105,7 @@
             <div class="hero-container" data-aos="fade-in">
                 <h1>Hi, I'm Roman.</h1>
                 <p>I'm a
-                    <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span>
+                    <span class="typed" data-typed-items="Front End Developer., Freelancer., Designer."></span>
                 </p>
             </div>
         </section>
@@ -127,7 +127,7 @@
                             <img src="assets/img/PortraitWhite.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                            <h3>A Full-Stack Developer from San Diego, California.</h3>
+                            <h3>A Front End Developer from San Diego, California.</h3>
                             <div class="row">
                                 <div class="col-lg-6">
                                     <ul>
@@ -162,7 +162,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <p>I enjoy the challenge of turning complex problems into simple and beautiful interface designs. I love the logic and structure of coding and always strive to write elegant and efficient code, whether it be HTML, CSS, jQuery, or Javascript. When I am not coding, you'll find me around friends and family or playing simulation video games. Driven and permanently curious, I strive to turn visitors into customers and help your business grow.</p>
+                            <p>Innovative Front End Developer with a focus on building and maintaining responsive websites. Proficient in HTML, CSS, and Javascript; plus modern libraries and frameworks. Driven and permanently curious, I strive to turn visitors into customers and help your business grow.</p>
                         </div>
                     </div>
 
@@ -270,16 +270,7 @@
                         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
                             <div class="progress">
-                                <span class="skill">Node.js
-                                    <i class="val">50%</i>
-                                </span>
-                                <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-
-                            <div class="progress">
-                                <span class="skill">Heroku
+                                <span class="skill">React
                                     <i class="val">70%</i>
                                 </span>
                                 <div class="progress-bar-wrap">
@@ -288,11 +279,20 @@
                             </div>
 
                             <div class="progress">
-                                <span class="skill">SQL
-                                    <i class="val">50%</i>
+                                <span class="skill">Bootstrap
+                                    <i class="val">80%</i>
                                 </span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+
+                            <div class="progress">
+                                <span class="skill">Bulma
+                                    <i class="val">70%</i>
+                                </span>
+                                <div class="progress-bar-wrap">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
 
@@ -318,7 +318,7 @@
                             <div class="resume-item pb-0">
                                 <h4>Roman Rangel</h4>
                                 <p>
-                                    <em>The enjoyment of being challenged to turn complex problems into simple and beautiful interface designs is what has kept my passion for web development. My work will always strive to show elegant and efficient code, whether it is HTML, CSS, or Javascript.</em>
+                                    <em>Innovative Front End Developer with a focus on building and maintaining responsive websites. Proficient in HTML, CSS, and Javascript; plus modern libraries and frameworks.</em>
                                 </p>
                                 <ul>
                                     <li>(858) 342-9528</li>
@@ -332,7 +332,7 @@
                                 <h4>Certification in Software Development and Design.</h4>
                                 <h5>2020 - 2021</h5>
                                 <p>
-                                    <em>University of California, San Diego.</em>
+                                    <em>University of California, San Diego Extension.</em>
                                 </p>
                                 <p>Certified in the fundamentals of full-stack development.</p>
                             </div>
@@ -390,11 +390,11 @@
                             <div class="portfolio-wrap">
                                 <img src="assets/img/phontoTheBrewBudz.JPG" class="img-fluid" alt="The Brew Budz image">
                                 <div class="portfolio-links">
-                                    <a href="assets/img/TheBrewBudzScreenshot.JPG" data-gall="portfolioGallery" class="venobox" title="Web 3">
-                                        <i class="bx bx-plus"></i>
+                                    <a href="assets/img/TheBrewBudzScreenshot.JPG" target="_blank" rel="noopener noreferrer" data-gall="portfolioGallery" class="venobox"title="Web 3">
+                                        Preview
                                     </a>
-                                    <a href="https://thebrewbudz.herokuapp.com/landing" title="Go to Website">
-                                        <i class="bx bx-link"></i>
+                                    <a href="https://thebrewbudz.herokuapp.com/landing" target="_blank" rel="noopener noreferrer" title="Go to Website">
+                                        Go to
                                     </a>
                                 </div>
                             </div>
@@ -404,11 +404,11 @@
                             <div class="portfolio-wrap">
                                 <img src="assets/img/phontoMovietaste.JPG" class="img-fluid" alt="">
                                 <div class="portfolio-links">
-                                    <a href="assets/img/MovieTasteScreenshot.JPG" data-gall="portfolioGallery" class="venobox" title="App 1">
-                                        <i class="bx bx-plus"></i>
+                                    <a href="assets/img/MovieTasteScreenshot.JPG" target="_blank" rel="noopener noreferrer" data-gall="portfolioGallery" class="venobox" title="App 1">
+                                        Preview
                                     </a>
-                                    <a href="https://claudialhc.github.io/MovieTaste/" title="More Details">
-                                        <i class="bx bx-link"></i>
+                                    <a href="https://claudialhc.github.io/MovieTaste/" target="_blank" rel="noopener noreferrer" title="More Details">
+                                        Go to
                                     </a>
                                 </div>
                             </div>
@@ -418,11 +418,11 @@
                             <div class="portfolio-wrap">
                                 <img src="assets/img/phontoNotetakes.JPG" class="img-fluid" alt="">
                                 <div class="portfolio-links">
-                                    <a href="assets/img/NoteTakerScreenshot.JPG" data-gall="portfolioGallery" class="venobox" title="Web 3">
-                                        <i class="bx bx-plus"></i>
+                                    <a href="assets/img/NoteTakerScreenshot.JPG" target="_blank" rel="noopener noreferrer" data-gall="portfolioGallery" class="venobox" title="Web 3">
+                                        Preview
                                     </a>
-                                    <a href="https://dry-reaches-22555.herokuapp.com/" title="Go to Website">
-                                        <i class="bx bx-link"></i>
+                                    <a href="https://dry-reaches-22555.herokuapp.com/" target="_blank" rel="noopener noreferrer" title="Go to Website">
+                                        Go to
                                     </a>
                                 </div>
                             </div>
@@ -432,11 +432,11 @@
                             <div class="portfolio-wrap">
                                 <img src="assets/img/phontoFirstweb.JPG" class="img-fluid" alt="">
                                 <div class="portfolio-links">
-                                    <a href="assets/img/FirstPortfolioScreeshot.JPG" data-gall="portfolioGallery" class="venobox" title="App 2">
-                                        <i class="bx bx-plus"></i>
+                                    <a href="assets/img/FirstPortfolioScreeshot.JPG" target="_blank" rel="noopener noreferrer" data-gall="portfolioGallery" class="venobox" title="App 2">
+                                        Preview
                                     </a>
-                                    <a href="https://romanrangel.github.io/romanrangel/" title="More Details">
-                                        <i class="bx bx-link"></i>
+                                    <a href="https://romanrangel.github.io/romanrangel/" target="_blank" rel="noopener noreferrer" title="More Details">
+                                        Go to
                                     </a>
                                 </div>
                             </div>
@@ -446,11 +446,11 @@
                             <div class="portfolio-wrap">
                                 <img src="assets/img/phontoEatDaBurger.JPG" class="img-fluid" alt="Eat Da Burger image">
                                 <div class="portfolio-links">
-                                    <a href="assets/img/EATDABURGER.JPG" data-gall="portfolioGallery" class="venobox" title="Web 3">
-                                        <i class="bx bx-plus"></i>
+                                    <a href="assets/img/EATDABURGER.JPG" target="_blank" rel="noopener noreferrer" data-gall="portfolioGallery" class="venobox" title="Web 3">
+                                        Preview
                                     </a>
-                                    <a href="https://polar-tundra-87708.herokuapp.com/" title="Go to Website">
-                                        <i class="bx bx-link"></i>
+                                    <a href="https://polar-tundra-87708.herokuapp.com/" target="_blank" rel="noopener noreferrer" title="Go to Website">
+                                        Go to
                                     </a>
                                 </div>
                             </div>
@@ -566,17 +566,17 @@
 
                                 <div class="col-md-12">
                                     <hr class="my-4 jumboline">
-                                    <a href="https://www.linkedin.com/in/roman-rangel-1039a8200" class="btn bg-info text-white btn-lg btn-block jumbotext" role="button">
+                                    <a href="https://www.linkedin.com/in/roman-rangel-1039a8200" target="_blank" rel="noopener noreferrer" class="btn bg-info text-white btn-lg btn-block jumbotext" role="button">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewbox="0 0 16 16">
                                             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
                                         </svg>
                                         LinkedIn</a>
-                                    <a href="https://github.com/romanrangel/romanrangel" class="btn bg-secondary text-white btn-lg btn-block jumbotext" role="button">
+                                    <a href="https://github.com/romanrangel/romanrangel" target="_blank" rel="noopener noreferrer" class="btn bg-secondary text-white btn-lg btn-block jumbotext" role="button">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewbox="0 0 16 16">
                                             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                                         </svg>
                                         Github</a>
-                                    <a href="https://drive.google.com/file/d/1o_eTI-JECGPGSqpcYJLHXQvp9zXZx-Id/view?usp=sharing?usp=sharing " class="btn bg-danger text-white btn-lg btn-block jumbotext" role="button">
+                                    <a href="https://drive.google.com/file/d/1o_eTI-JECGPGSqpcYJLHXQvp9zXZx-Id/view?usp=sharing?usp=sharing " target="_blank" rel="noopener noreferrer" class="btn bg-danger text-white btn-lg btn-block jumbotext" role="button">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewbox="0 0 16 16">
                                             <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                                             <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
